refactor: protect APIs with session cookies
